fix(MenuAdaptive scss): Добавила z-index

--- a/src/components/MenuAdaptive/menuAdaptive.module.scss
+++ b/src/components/MenuAdaptive/menuAdaptive.module.scss
@@ -10,6 +10,7 @@
     background-color: rgba(0, 0, 0, 0.8);
     visibility: hidden;
     transition: visibility 0.3s ease-in-out;
+    z-index: 10;
 
     &__menu {
        background-color: colors.$TABLET_BACKGROUND;
